--- a/00_Titanic_Survival_Prediction.ipynb
+++ b/00_Titanic_Survival_Prediction.ipynb
@@ -2328,10 +2328,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 91,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def predict_survival(dataframe):\n",
@@ -2356,7 +2354,7 @@
     "            elif age < 12 or (age > 13 and age < 19) or (age > 20 and age < 40) or(age > 41 and age< 60) or (age > 61 < 80 ) :\n",
     "                predict.append(1)\n",
     "            else:\n",
-    "                predict.append(0\n",
+    "                predict.append(0)\n",
     "         #second class females by age\n",
     "        elif pclass == 2:\n",
     "            if sex == \"female\":\n",
@@ -2378,7 +2376,8 @@
     "                predict.append(0)\n",
     "    return predict\n",
     "    #SHOULD return a 1 or zero value as to survival\n",
-    "    return predict"
+    "\n",
+    "    "
    ]
   },
   {
