cleaning and setting up sklearn

--- a/00_Titanic_Survival_Prediction.ipynb
+++ b/00_Titanic_Survival_Prediction.ipynb
@@ -1802,7 +1802,8 @@
     "    # Create a function that returns the accuracy score for your classifier.  \n",
     "    # The formula for accuracy = TP + TN / TP + TN + FP + FN\n",
     "    \n",
-    "    pass"
+    "    accuracy = \n",
+    "    return"
    ]
   },
   {
