commited more to the model but still not done

--- a/02_K_Nearest_Neighbors.ipynb
+++ b/02_K_Nearest_Neighbors.ipynb
@@ -46,11 +46,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-16-bb15118067d4>, line 35)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-16-bb15118067d4>\"\u001b[1;36m, line \u001b[1;32m35\u001b[0m\n\u001b[1;33m    predicted_classes = []\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "# We'll use this method rather than use the Pythagorean theorem to calculate Euclidean distance manually.  \n",
     "# How you gonna do Pythagorus like that?\n",
@@ -100,15 +107,33 @@
     "        \"\"\"Modify this function so that it takes a parameter, K, and retrieves the K closest points.  As is, this\n",
     "        function currently only retrieves the labels of the single closest point.  \"\"\"\n",
     "        # getting help for this\n",
-    "        shortest_distance = self._distance(row, self.X_train[0])\n",
-    "        for i in range(1, len(self.X_train)):\n",
-    "            current_distance = self._distance(row, self.X_train[i])\n",
-    "            index_of_closest = 0\n",
-    "            # If this distance is shorter than the shortest distance, make it the new shortest distance.  \n",
-    "            if current_distance < shortest_distance:\n",
-    "                shortest_distance < current_distance\n",
-    "                index_of_closest = i\n",
-    "        return y_train[index_of_closest]\n",
+    "        if K <= 0:\n",
+    "            return []\n",
+    " \n",
+    "        return_list = []\n",
+    "        shortest_list = []\n",
+    "        dist_tuple = (0, self._distance(row, self.X_train[0]))\n",
+    "\n",
+    "        shortest_list.append(dist_tuple)\n",
+    "        \n",
+    "        for row_ndx in range(1, len(self.X_train)):                \n",
+    "            current_distance = self._distance(row, self.X_train[row_ndx])\n",
+    "            if len(shortest_list) < K:\n",
+    "                dist_tuple = (row_ndx, current_distance)\n",
+    "                shortest_list.append(dist_tuple)\n",
+    "            else:\n",
+    "                longest_distance = shortest_list[0]\n",
+    "                longest_index = 0\n",
+    "                for index, item in enumerate(shortest_list):\n",
+    "                    if longest_distance[1] < item[1]:\n",
+    "                        longest_distance = item\n",
+    "                        longest_index = index\n",
+    "                if current_distance < longest_distance[1]:\n",
+    "                    dist_tuple = (row_ndx, current_distance)\n",
+    "                    shortest_list[longest_index] = dist_tuple\n",
+    "        for item in shortest_list:\n",
+    "            return_list.append(self.y_train[item[0]])\n",
+    "            \n",
     "    "
    ]
   },
