bingo got the f score to work

--- a/02_K_Nearest_Neighbors.ipynb
+++ b/02_K_Nearest_Neighbors.ipynb
@@ -47,7 +47,9 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# We'll use this method rather than use the Pythagorean theorem to calculate Euclidean distance manually.  \n",
@@ -511,15 +513,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sklearn 0.96\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0.97333333333333338"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -553,13 +558,15 @@
     "neighbor.fit(X_train, y_train)\n",
     "data_prediction = neighbor.predict(X_test)\n",
     "accuracy = accuracy_score(y_test, data_prediction, normalize=True, sample_weight = None)\n",
-    "print(\"sklearn\", accuracy)"
+    "accuracy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
