--- a/03_Naive_Bayesian_Classifiers.ipynb
+++ b/03_Naive_Bayesian_Classifiers.ipynb
@@ -158,88 +158,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 1 0 0 0 0 0 0 0 0 1 1 1 1 1 0 0 0 1 0 1 0 0 0 0 0 1 0 1 0 1 0 0 0 0 0\n",
-      " 1 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 1 1 0 1 0 0 1 0 1 0 1 0 0 0 0 1 0 1\n",
-      " 1 0 0 1 0 0 0 0 0 1 0 0 0 1 0 1 0 0 1 1 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 1\n",
-      " 1 0 0 0 1 1 0 0 0 0 1 0 0 1 1 0 0 0 1 0 1 0 0 1 0 0 0 0 0 0 1 0 0 0 1 1 1\n",
-      " 1 1 0 1 1 0 0 0 0 0 0 0 0 0 1 1 1 0 1 1 1 0 0 0 1 0 0 0 0 0 0 0 0 0 1 0 1\n",
-      " 1 1 0 1 0 0 1 0 0 0 1 1 0 0 0 1 0 0 1 1 0 0 0 1 0 1 0 0 0 1 0 0 0 0 1 1 0\n",
-      " 0 0 0 0 1 1 0 1 1 0 0 1 0 1 1 0 0 1 1 0 0 0 0 0 0 1 0 0 0 0 1 0 0 1 1 0 1\n",
-      " 0 1 0 1 0 0 1 0 0 0 0 1 0 0 0 1 0 0 0 0 1 0 0 0 1 1 0 0 0 1 1 0 0 1 1 0 1\n",
-      " 0 0 0 0 1 1 0 0 1 1 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 1 0 0 1 0 1 0 1\n",
-      " 0 1 0 0 0 1 0 0 0 1 0 0 1 1 0 0 1 0 0 1 0 0 1 0 0 1 0 0 0 0 1 1 0 1 0 0 0\n",
-      " 0 0 0 0 0 1 1 0 1 1 0 1 0 1]\n",
-      "538    0\n",
-      "417    1\n",
-      "148    0\n",
-      "92     0\n",
-      "136    0\n",
-      "623    0\n",
-      "234    0\n",
-      "265    0\n",
-      "268    0\n",
-      "329    0\n",
-      "462    0\n",
-      "247    0\n",
-      "274    0\n",
-      "314    1\n",
-      "24     1\n",
-      "712    1\n",
-      "89     0\n",
-      "640    0\n",
-      "482    0\n",
-      "542    1\n",
-      "449    0\n",
-      "54     0\n",
-      "168    0\n",
-      "563    0\n",
-      "544    0\n",
-      "607    0\n",
-      "230    1\n",
-      "195    1\n",
-      "389    0\n",
-      "673    0\n",
-      "      ..\n",
-      "107    0\n",
-      "489    0\n",
-      "420    0\n",
-      "205    0\n",
-      "212    0\n",
-      "1      0\n",
-      "505    0\n",
-      "76     0\n",
-      "402    1\n",
-      "391    1\n",
-      "635    1\n",
-      "188    1\n",
-      "296    1\n",
-      "477    0\n",
-      "343    0\n",
-      "433    0\n",
-      "65     0\n",
-      "383    0\n",
-      "411    0\n",
-      "552    0\n",
-      "347    0\n",
-      "579    1\n",
-      "440    1\n",
+      "[1 1 1 1 0 1 0 0 0 1 0 0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 1 0 0 0 0 0 1 0\n",
+      " 0 0 1 0 0 1 0 0 1 0 1 0 0 1 0 0 1 1 1 1 1 1 1 1 0 0 0 1 1 0 0 0 0 0 0 1 0\n",
+      " 1 0 0 1 0 1 0 0 1 0 0 0 0 0 1 0 1 0 1 0 0 1 0 0 1 0 0 0 1 0 0 1 0 1 0 0 0\n",
+      " 0 1 0 0 0 0 0 0 0 0 1 0 1 0 0 0 0 0 0 0 0 0 0 1 0 1 0 0 1 1 0 0 0 0 0 0 0\n",
+      " 1 0 1 1 0 0 0 1 1 1 0 0 1 0 0 0 0 0 1 1 0 1 0 0 0 0 0 1 0 0 0 0 0 1 1 0 1\n",
+      " 1 0 0 0 0 0 0 1 0 0 1 1 1 0 0 0 1 1 0 0 1 0 0 0 0 0 1 0 0 0 0 1 0 0 0 0 1\n",
+      " 0 1 0 0 0 0 1 1 0 1 1 0 0 0 0 0 0 0 0 0 1 1 0 1 1 1 0 1 0 1 0 1 1 1 0 0 0\n",
+      " 0 0 1 1 1 0 0 0 1 1 0 1 0 0 0 0 0 0 0 0 1 0 0 1 1 0 0 1 1 0 0 1 0 0 0 1 0\n",
+      " 1 0 1 0 1 0 0 0 1 0 0 0 1 1 1 0 1 1 0 0 1 1 0 0 1 1 1 0 0 0 0 0 0 1 0 0 0\n",
+      " 0 1 1 0 0 0 0 0 0 0 1 0 0 1 0 0 0 1 0 1 0 0 0 0 0 0 1 0 0 0 0 1 1 0 1 1 1\n",
+      " 0 1 0 0 0 0 0 0 1 0 0 0 0 0]\n",
+      "358    0\n",
+      "487    0\n",
+      "756    0\n",
+      "144    0\n",
+      "208    0\n",
+      "604    1\n",
+      "117    0\n",
+      "194    0\n",
+      "21     0\n",
+      "675    1\n",
+      "490    0\n",
+      "471    0\n",
       "307    0\n",
+      "428    0\n",
+      "92     0\n",
+      "712    1\n",
+      "374    0\n",
+      "329    0\n",
+      "652    0\n",
+      "447    0\n",
+      "186    1\n",
+      "532    0\n",
+      "33     0\n",
+      "369    1\n",
+      "310    0\n",
+      "388    1\n",
+      "142    0\n",
+      "376    0\n",
+      "263    0\n",
+      "635    1\n",
+      "      ..\n",
+      "765    0\n",
+      "268    0\n",
+      "166    0\n",
+      "463    0\n",
+      "418    0\n",
+      "274    0\n",
+      "634    0\n",
+      "23     1\n",
+      "352    0\n",
+      "162    0\n",
+      "542    1\n",
+      "408    1\n",
+      "569    1\n",
+      "598    1\n",
+      "748    1\n",
+      "243    1\n",
+      "138    0\n",
       "238    1\n",
-      "114    1\n",
-      "384    0\n",
-      "427    1\n",
-      "52     0\n",
-      "120    1\n",
+      "181    0\n",
+      "252    0\n",
+      "202    0\n",
+      "727    0\n",
+      "204    0\n",
+      "240    0\n",
+      "4      1\n",
+      "140    0\n",
+      "217    0\n",
+      "654    0\n",
+      "433    0\n",
+      "48     1\n",
       "Name: Outcome, Length: 384, dtype: int64\n",
-      "accuracy score: 0.78125\n",
-      "f1 score: [ 0.83529412  0.6744186 ]\n"
+      "accuracy score: 0.7578125\n",
+      "f1 score: [ 0.81584158  0.64638783]\n"
      ]
     }
    ],
@@ -249,7 +249,7 @@
     "import pandas as pd\n",
     "\n",
     "df= pd.read_csv(\"datasets/pima_indians_diabetes.csv\")\n",
-    "df\n",
+    "#df\n",
     "target2 =df['Outcome']\n",
     "data1 =df.drop('Outcome', axis=1)\n",
     "#investigating for null values, doesnt seem to be any\n",
@@ -266,7 +266,29 @@
     "print(prediction)\n",
     "print(y_test)\n",
     "print(\"accuracy score: {}\".format(accuracy_score(y_test, prediction)))\n",
-    "print(\"f1 score: {}\".format(f1_score(y_test, prediction, average=None)))\n"
+    "print(\"f1 score: {}\".format(f1_score(y_test, prediction, average=None)))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.80519481  0.76623377  0.71428571  0.71428571  0.71428571  0.72727273\n",
+      "  0.85714286  0.74025974  0.67105263  0.77631579]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.cross_validation import KFold, cross_val_score\n",
+    "k_fold = KFold(len(target2), n_folds=10, shuffle=True, random_state=0)\n",
+    "clf= GaussianNB()\n",
+    "print( cross_val_score(clf, data1, target2, cv=k_fold, n_jobs=1) )"
    ]
   }
  ],
