Need to drop zeros from this

--- a/03_Naive_Bayesian_Classifiers.ipynb
+++ b/03_Naive_Bayesian_Classifiers.ipynb
@@ -288,7 +288,11 @@
     "from sklearn.cross_validation import KFold, cross_val_score\n",
     "k_fold = KFold(len(target2), n_folds=10, shuffle=True, random_state=0)\n",
     "clf= GaussianNB()\n",
-    "print( cross_val_score(clf, data1, target2, cv=k_fold, n_jobs=1) )"
+    "print( cross_val_score(clf, data1, target2, cv=k_fold, n_jobs=1) )\n",
+    "\n",
+    "'''\n",
+    "SCORES ARE LOW DUE TO ME NOT DROPPING 0'S, SINCE NO-ONE CAN HAVE A SKIN THICKNESS OF 0 AND A A BMI OF ZERO, WILL FIX\n",
+    "'''"
    ]
   }
  ],
