--- a/04_Regression_Techniques.ipynb
+++ b/04_Regression_Techniques.ipynb
@@ -406,24 +406,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "count    506.000000\n",
-       "mean      11.136779\n",
-       "std        6.860353\n",
-       "min        0.460000\n",
-       "25%        5.190000\n",
-       "50%        9.690000\n",
-       "75%       18.100000\n",
-       "max       27.740000\n",
-       "Name: INDUS, dtype: float64"
+       "mean     408.237154\n",
+       "std      168.537116\n",
+       "min      187.000000\n",
+       "25%      279.000000\n",
+       "50%      330.000000\n",
+       "75%      666.000000\n",
+       "max      711.000000\n",
+       "Name: TAX, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,14 @@
     "#TIME TO CHECK FOR ZEROS\n",
     "df.CRIM.describe()    # Single outlier of 88 skews mean, need to do normal distrubution\n",
     "df.ZN.describe()     #chances are the larger outliers are due to mansions ans such\n",
-    "df.INDUS.describe() # not a large outlier, so (AND PLEASE DONT DRAG ME FOR THIS) it shouldt skew much\n"
+    "df.INDUS.describe() # not a large outlier, so (AND PLEASE DONT DRAG ME FOR THIS) it shouldt skew much, relatively mom and pop\n",
+    "df.CHAS.describe() #looks like most of the land doesnt border that river\n",
+    "df.NOX.describe () # high amounts of this are no doubt due to farming, so where ever this is high, the housing prices should drop\n",
+    "df.RM.describe()   #rooms per house\n",
+    "df.AGE.describe() #porportion of houses older than 1940\n",
+    "df.DIS.describe() #distances of employment centers, employment centers are usually an inidcator of lower socio economic status\n",
+    "df.RAD.describe()  # closer to highways usually a bad thing, due to noise\n",
+    "df.TAX.describe() #higher property taxes== better neighborhoods"
    ]
   },
   {
