--- a/04_Regression_Techniques.ipynb
+++ b/04_Regression_Techniques.ipynb
@@ -406,32 +406,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "count    506.000000\n",
-       "mean     408.237154\n",
-       "std      168.537116\n",
-       "min      187.000000\n",
-       "25%      279.000000\n",
-       "50%      330.000000\n",
-       "75%      666.000000\n",
-       "max      711.000000\n",
-       "Name: TAX, dtype: float64"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'MEDV'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-37-071b8bb9f9e8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mB\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdescribe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m   \u001b[1;31m#porportion of black residents...important due to red taping\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mLSTAT\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdescribe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# lower class residents y percentage...donotes money and therefore house prices\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMEDV\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdescribe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   3079\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3080\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3081\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3082\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3083\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'MEDV'"
+     ]
     }
    ],
    "source": [
     "# Perform Exploratory Data Analysis here!\n",
     "\n",
-    "#df.isnull().values.any()   #no NAN values so far\n",
+    "df.isnull().values.any()   #no NAN values so far\n",
     "df.isnull().any().any()    #No null values so far either...hmmmmm\n",
     "#TIME TO CHECK FOR ZEROS\n",
     "df.CRIM.describe()    # Single outlier of 88 skews mean, need to do normal distrubution\n",
@@ -443,7 +437,11 @@
     "df.AGE.describe() #porportion of houses older than 1940\n",
     "df.DIS.describe() #distances of employment centers, employment centers are usually an inidcator of lower socio economic status\n",
     "df.RAD.describe()  # closer to highways usually a bad thing, due to noise\n",
-    "df.TAX.describe() #higher property taxes== better neighborhoods"
+    "df.TAX.describe() #higher property taxes== better neighborhoods\n",
+    "df.PTRATIO.describe() #pupil to teacher ratio.....low is good sinces thats usually wealthier schools that can accomidate\n",
+    "df.B.describe()   #porportion of black residents...important due to red taping\n",
+    "df.LSTAT.describe() # lower class residents y percentage...donotes money and therefore house prices\n",
+    "df.MEDV.describe()   #hmmm not here"
    ]
   },
   {
