almost done need to do whole sale

--- a/01_Decision_Trees.ipynb
+++ b/01_Decision_Trees.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,15 +58,20 @@
       "\n",
       " Directory of C:\\Users\\Don\\Desktop\\github\\DS-2-Machine-Learning\n",
       "\n",
-      "03/01/2018  10:28 AM    <DIR>          .\n",
-      "03/01/2018  10:28 AM    <DIR>          ..\n",
-      "03/01/2018  05:10 AM    <DIR>          .ipynb_checkpoints\n",
-      "03/01/2018  05:07 AM            93,188 00_Titanic_Survival_Prediction.ipynb\n",
-      "03/01/2018  10:28 AM            58,442 01_Decision_Trees.ipynb\n",
-      "02/23/2018  12:49 AM    <DIR>          datasets\n",
-      "03/01/2018  05:07 AM    <DIR>          img\n",
-      "               2 File(s)        151,630 bytes\n",
-      "               5 Dir(s)  54,120,710,144 bytes free\n"
+      "03/15/2018  01:25 PM    <DIR>          .\n",
+      "03/15/2018  01:25 PM    <DIR>          ..\n",
+      "03/15/2018  02:07 AM    <DIR>          .ipynb_checkpoints\n",
+      "03/01/2018  06:07 AM            93,188 00_Titanic_Survival_Prediction.ipynb\n",
+      "03/01/2018  01:48 PM            18,021 01_Decision_Trees.ipynb\n",
+      "03/06/2018  03:37 PM            30,446 02_K_Nearest_Neighbors.ipynb\n",
+      "03/08/2018  02:19 PM            13,562 03_Naive_Bayesian_Classifiers.ipynb\n",
+      "03/13/2018  02:44 PM            53,983 04_Regression_Techniques.ipynb\n",
+      "03/15/2018  01:25 PM            13,228 05_PCA_and_Clustering.ipynb\n",
+      "03/15/2018  02:03 AM    <DIR>          datasets\n",
+      "03/13/2018  06:41 AM    <DIR>          img\n",
+      "03/01/2018  12:52 PM               361 iris\n",
+      "               7 File(s)        222,789 bytes\n",
+      "               5 Dir(s)  41,157,226,496 bytes free\n"
      ]
     }
    ],
@@ -83,8 +88,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = pd.read_csv('datasets/titanic.csv')\n",
@@ -110,8 +117,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Drop columns that are not helpful\n",
@@ -124,8 +133,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Use .dropna() to remove any rows that contain a null value\n",
@@ -140,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +221,7 @@
        "Name: Survived, Length: 712, dtype: int64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +316,7 @@
        "True Survival                        0                   88"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
