--- a/05_PCA_and_Clustering.ipynb
+++ b/05_PCA_and_Clustering.ipynb
@@ -22,7 +22,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from IPython.display import HTML\n",
@@ -529,7 +531,8 @@
    "source": [
     "#turning into a dataframe\n",
     "index= ['PC1','PC2','PC3','PC4']\n",
-    "df_pca = pd.DataFrame(data=X_with_pca, columns=index)\n",
+    "df_pca = pd.DataFrame(data=X_wi\n",
+    "                      '};'[th_pca, columns=index)\n",
     "df_pca =df_pca.drop(['PC3', 'PC4'], axis=1)\n",
     "df_pca"
    ]
@@ -967,16 +970,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance for Principal Component 0: 0.44082892881128066\n",
+      "Explained Variance for Principal Component 1: 0.2837639952661692\n",
+      "Explained Variance for Principal Component 2: 0.12334412896786467\n",
+      "Explained Variance for Principal Component 3: 0.09395503752971496\n",
+      "Explained Variance for Principal Component 4: 0.04761272400688684\n",
+      "Explained Variance for Principal Component 5: 0.010495185418083763\n"
+     ]
+    }
+   ],
    "source": [
-    "df = None\n",
+    "df = pd.read_csv('datasets/wholesale_customers_data.csv')\n",
     "channel = None\n",
     "\n",
-    "# Now Drop the Channel and Region Columns"
+    "labels2= df_dropped =df.drop(['Channel', 'Region'], axis=1)\n",
+    "# Now Drop the Channel and Region Columns\n",
+    "df_dropped\n",
+    "labels2\n",
+    "\n",
+    "# Fit the scaler to iris.data\n",
+    "scaler.fit(df_dropped)\n",
+    "\n",
+    "# Call scaler.transform() on iris.data and store the result in scaled_X\n",
+    "scaled_X_wholesale = scaler.transform(df_dropped)\n",
+    "\n",
+    "\n",
+    "# Create a PCA() object\n",
+    "pca = PCA()\n",
+    "\n",
+    "# Fit the pca object to scaled_X\n",
+    "pca.fit(scaled_X_wholesale)\n",
+    "\n",
+    "# Call pca.transform() on scaled_X and store the results below\n",
+    "X_with_pca = pca.transform(scaled_X_wholesale)\n",
+    "\n",
+    "# Enumerate through pca.explained_variance_ratio_ to see the amount of variance captured by each Principal Component\n",
+    "for ind, var in enumerate(pca.explained_variance_ratio_):\n",
+    "    print(\"Explained Variance for Principal Component {}: {}\".format(ind, var))\n"
    ]
   }
  ],
