--- a/06_K-Means_Clustering.ipynb
+++ b/06_K-Means_Clustering.ipynb
@@ -580,7 +580,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pylab as pl\n",
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "pca = PCA()\n",
+    "\n",
+    "# call pca.fit() on the data stored in 'scaled_data'.\n",
+    "pca.fit(scaled_data)\n",
+    "# Call pca.transform() on 'scaled_data' and store the results below.  \n",
+    "pca_data = pca.transform(scaled_data)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXYAAAD8CAYAAABjAo9vAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAGltJREFUeJzt3X+IbWtdx/HPd/aZU26vIWwPZers\nMRLpJqLdgyCFRMfychDNUCiGCApG9yUyKFAbSCzmjwiiiwY1pKDsyRJMKjX0Skn5h9a5crWr9yoW\nM6dbkvcqUoe5UN759seZfZ2zZ/141u9nrfV+wYJzZtbe69mzn/Vdz/o+z3oec3cBAIZjo+sCAADq\nRWAHgIEhsAPAwBDYAWBgCOwAMDAEdgAYmMqB3cy+18z+ycy+YGZfMrN31VEwAEA5VnUcu5mZpGe6\n+y0z25T0GUlvdffP1lFAAEAxl6q+gd++Mtw6++/m2cZTTwDQkcqBXZLMbCLpQUk/LOmP3P1zWfs/\n5znP8e3t7ToODQCj8eCDDz7h7lfy9qslsLv7U5JeZmbPlvQRM3uJuz98fh8z25W0K0lbW1u6ceNG\nHYcGgNEws+OQ/WodFePu35b0aUn3JvzuwN2vuvvVK1dyLzgAgJLqGBVz5aylLjN7hqRXS3q06vsC\nAMqpIxXzXEnvP8uzb0j6kLt/tIb3BQCUUMeomC9KenkNZQEA1IAnTwFgYAjsADAwBPYEh4eH2t7e\n1sbGhra3t3V4eNh1kQAgWC3j2Ifk8PBQu7u7Ojk5kSQdHx9rd3dXkrSzs9Nl0QAgCC32NXt7e08H\n9ZWTkxPt7e11VCIAKIbAvubmzZuFfg6gWaRGiyOwr9na2ir0cwDNWaVGj4+P5e5Pp0YJ7tkI7Gv2\n9/c1nU7v+Nl0OtX+/n5HJQLGi9RoOQT2NTs7Ozo4ONB8PpeZaT6f6+DggI5ToANZqVFSNOkqL7RR\nxtWrV53ZHQHk2d7e1vHxxQkNZ7OZnnzyyTta89PpdPCNMDN70N2v5u1Hix1AtNJSo5JI0WQgsAOI\nVlpq9Fvf+lbi/oxeu41UDIDeSUvRzOdzHR0dtV+glpCKATBYjF7LRmAH0DuMXstGKgYAeoJUDACM\nFIEdAAaGwA4AA0NgB4CBIbADwMCMKrAzaRCAMRjN0ngseQdgLEbTYmdeZwBjMZrAzpJ3AMZiNIGd\nJe8AjMVoAjuTBgEYi9EEdiYNAjAWlScBM7MXSPqApB+QdCrpwN3vz3oNk4ABQHGhk4DVMdzxO5J+\nw90/b2bPkvSgmT3g7l+u4b0BAAVVTsW4+9fd/fNn//4fSY9Iel7V9wUAlFNrjt3MtiW9XNLnEn63\na2Y3zOzG448/XudhAQwMT4lXU1tgN7O7JH1Y0q+7+3+v/97dD9z9qrtfvXLlSl2HbRwVDGjX6inx\n4+NjufvTT4lz7oWrZQUlM9uU9FFJn3D3P8jbvy+dp+vTEEi3h0gymgZozlgXqg7R2gpKZmaS3ivp\nkZCg3qS6W9dMQwC0j6fEq6sjFfPjkn5R0k+Z2UNn2/Ua3reQJm7fqGBA+3hKvLo6RsV8xt3N3V/q\n7i872z5eR+GKaKJ1TQUD2sdT4tUN5snTJlrXVDCgfTwlXl0tnadFNdF52lSHy+Hhofb29nTz5k1t\nbW1pf3+fCgagE611nsaiqdb1zs6Ojo6OdHp6qqOjI4I6gOgNJrBz+wYAtw0mFQMAQze6VAwA4DYC\nOwAMDIEdAAaGwA4AA0Ngz5A19wyzPgKIVR0rKA3S+syOq7lnVtJ+x/BKAF1juGOKrCdZJTGtKIDW\nMdyxoqy5Z0LnpSFdA6ALBPYUWTM7hsz6yCowALpCYE+RNfdMyLw0LNIBoCt0nqZYdYJmzeyY9TsW\n6QDQFTpPG8K6jQDqRudpx1ikA0BXCOwNYRphAF0hFQMAPUEqBgBGisBeAA8cAeiD0Qb2VZA2M126\ndElmlhmseeAIQF+MMse+PsHXedPpNLGTk+GLALoWmmMfZWBPC9IrScF6Y2NDSX8rM9Pp6WndRQSA\nC+g8zZD39GfSZF4bG8l/qrR5Y4A+oh9pGEYZ2POCcdJkXk899dSF/XjgCEPSVD8SF4sOuHvlTdL7\nJH1D0sMh+99zzz3epeVy6dPp1CVd2KbTqS+XS18ulz6fzxP3keSTycSXy2WnnwMItarPZubz+Tyx\n7qbV99X+ea9PO+76ubY6x1CcpBseEpNDdsp9E+lVkn6sL4Hd3e8I3JPJ5I4KnBX4V5uZdf0RgCCh\nwdXMUut7meC8XC6fPreSLhYoLjSw19Z5ambbkj7q7i/J27frztM8eZ2rEqNh0B+hI7rS9ptMJomp\nyKxzIGvkmcSgg7LoPK0gr3OV3Dr6JHQK6bSJ65KCetb7SsnrEZzHoINmtRbYzWzXzG6Y2Y3HH3+8\nrcOWklXpJpMJk3mhV0JW/JLSJ65brfMb+r5SfuPo1q1bdKI2KSRfE7JJ2laPcuxZlssluXUMRtUO\nzLzXJ3WsZg08KFMG3KY2O099YIHd3X02m9HpgzuUHRkSQxmqlj3t9WlBf7FY5A5AiOV8iuF7DdVq\nYJf0QUlfl/R/kh6T9CtZ+/chsDNMC+fFUB9iKMO60CGSWcG9SzH+TbO03mIvsvUhsLv360qOZmUF\nsDGVYV1a0F5PWaYNe5xMJp2UOy9dFMOdRBICO1Cj0ACWpo5GQtUyNCH0YhNTi73Pz6mEBnaGOwIB\nQkeWJKnrUf0qZWhK6Nq+aSNr0n7epLyhmNIAhmOGRP+6N1rs6Jsqudi6Uiix5oND7kZiKntezj+G\nv2kakYppHjn4cSn7fdeZQilThjbradaxYjlf8nLrMZ/HBPYcdQz/iqUFgrh12elZtJ5WuXCsLlax\nnxN9PncJ7Bnq+GJjHKGAOHUZSIrU0zLlDOmIjPGciOXuoSgCe4Y6gnKMIxQQr8Vi8fSQv8lk4ovF\novZjJAWrIvW0zHmRldY4f6y+BtLYENgz1BGUabEjVBst9rRjFHmCusx5kdcRKclns1lvUx+xCQ3s\noxzuWHTYWNIKMKHDvICk4XUnJyfa29tr/BiSgutpmeGUecMCV8cO+fystFSjkOhf99Z1i71IC2qx\nWKR2CHF7iRBtPNyUdYzQelo2x3758uXUlnpoOqjPHZpt0hBTMXUG0qxJjVY/T7uNVUbnE4Ee6/LS\ndnlDBEMCXp1j5YvW4bx0T0jZSG2GGVxgb+OKntQ6T9vWW1u0OJAmq27k1ZvQgNdl/ctrkYeUjcEI\nYQYX2Ju+omfdMoYct0qrDMOX9v3n1ZsiAa+rOhZybuaVjRZ7mMEF9qav6CHDts4fc71iZl0Ukuam\npjUP9/x6XTXgtRHsk1rkZlZoSGfWvO40iL5rcIG96St6kRRMUoXNujCkvTetkfEo22KvkmJpMz1z\n7dq1C5+h6LHW/0ZdNohivcMeXGBvupJmBebZbFZqREHIRQLDVyXHvnp9mSDTVnojK41Z5VhdpWdi\n7i8bXGB3b/Yqmnc7GXLs5TJ9rVRa7OPVVf9L1l1onfLuVsvqqkM15nz/IAN707KGQIZewdMqRR8m\nR0IzYgtQSX1EVWRdQPrYYo95hA6BvUZFHsumEwjrukwptNG/09QFpKuUCC32AQf281OR5qVTsh5y\nIogjL0A1WV9C6u5sNgvqR0qzWCwS3//atWuVy5/38FYTfzdy7AMN7KEdoaRXEKqONF8ZoanBKsfv\nooXb9N8t1sZZaGC32/u26+rVq37jxo3Wjxtqe3tbx8fHpV47n891dHRUb4EwWGl1ra56tFpv9fwk\nXGamvPO+yPE3NjYS38/MdHp6Wqi8oZr+u8XKzB5096t5+41ydsd167PKlQ3qknTz5s0aS4ahS6sv\nddWjnZ0dHRwcaD6fy8w0n89zg3rR43exyHbTf7e+G31gT1pBPs90OtVsNkv8Xe9XN0er2giKOzs7\nOjo60unpqY6OjjSfz0uXK0kXU1h3cTHplZB8Td1bTDn2kA5SreUNQx8sOS/WnB261UVHXV4fUpnj\nt12/Y+7gbJLoPA1TZOKvpBkdQyrzWCshwnRx0V+fnrrKqJiujLGxRGBPkFQRirTYy/byxzwuFnEb\nY/BCutDAPpoce1IufXd3V9evX7+QH9zc3NTly5fv+JmZ6fr166WOTUfPeFRZ3m39tffdd19inWXJ\nOOQKif55m6R7JX1F0tckvT1v/y5a7Fmt5qRWUdaSeHUeG8NRdSbGzc3NRu8c0Z267rzUVipG0kTS\nv0r6IUmXJX1B0t1Zr+kisBed/6HOYEyOfRyq1JmsZRhD6yziVOf532Zgf6WkT5z7/zskvSPrNbG1\n2JPUPREQudL+y/sOq9SZ0KBeR4udutiuOhuJbQb2N0r603P//0VJ70nYb1fSDUk3tra2Svx5qil6\n1SR9gvNC6k9anZlMJrlBNDSo57X08oI2d4/tq7OR2GZgf1NCYH931mtiGhWTtS8nAFZCLvQhcwyl\n1aGQVEwddZYGS/v62mLvRSqmDG5ZsRLa6jpfZyaTSfAJvVwu/fLly5XSLyEBJOa5xoeqrzn2S5L+\nTdIL9d3O0x/Nek1fAjuwkhc0kxoBRYPocrlMbLmHBoGQ49Fi70bvRsXcPpauS/qqbo+O2cvbvy+B\nnRb7MJT5Htdfk7WwclqLLC29MpvNai+ve/l0UR1TCLCQTDtaDexFtz4EdnLsw1DmeYSiq2ClBdSN\njY3En29ubpaqR3V1jFZtsFTpS0A1BPaKuGXtv6x0SNb3WPS7LzLfUNl61FbQDpH29+FcaV5oYGeh\njRRdLB6AemXNrZ/1PRb97svM4V+0HsW0sETa32cd50r9WGijIuZ77r+suXhW32PS3C5Fv/uk+cjz\nFK1HaZ+lyqIwZYWWnXOlQyHN+rq3WFIxSbet52d8ZE3TfktLGZhZZqdnVkdpmpBhjlXqUV76o80O\nS3Ls3RE59mxJlXNzc/PCWOJVcKenv3+SvmMz88Vi4e7FJ4aretwq9Sirv6CLYMqomG4Q2DMsl8vc\nVtX6iY5+ygrQTT6s00QnJnUVBPYUIbeRTZzoiE8T48ybHJUSMhqFujpsBPYUoUO1aAX1T9GgWiaw\nZw07bPrZh5BGSWhd7erihGpGHdjL3H7n5dhX27Vr1xotO8opE1TLpGKy8vJtPPtQR+d+lxcnVDPa\nwJ5XMdNOvslkcseoGDNLnZTp8uXLVPTIlAmqZV6TdTFoe4KtkCdRk37f9cUJ5Y02sOdVzCItkqxb\nXloxcSkTVMu0TvsSFLM+W0wXJxQz2sAeUjFDc4hZgZ1WTFzKBtWi+eS+pDHKXoBiujjhotEG9jpP\n8LzATismHm0G1TY6Hqu+T1YDpy8XJ1w02sBepmKmvebuu+8u1GJnNEG3qj5UlPTaLr7TOoJrSEqy\n6YsT6jfawO5evGJmnQTXrl1L/N36iUZLp7/qnFqgDnWkQ6iPwzTqwF5U0bz8bDbz2Wx2x4WD3GR/\npX13RZa2q1PWkNwqi4UQ1PsvNLAzba+KTYl6eHio3d1dnZycPP2z6XR6x//PY+rS+IVOQ7vS9Hca\nMg3wdDrVwcGBdnZ2GisH4sO0vQUkTbu6ubmpW7du3TGdqyTt7e1dCOInJyeaTCaJ783UpfFL+466\n+k5DpgE+OTnRm9/8Zl26dElmpkuXLum+++5rtFzokZBmfd1bbKkY94uplvWHk1b5SaXcIq/2SXoN\n4hZbjn1VplV9zKpz69tq5sqYkBKqj8ixl5eVL0/Lu66eXKUC91NMo2LWpdXHtHoYEzpx60VgryCr\nMzXrpEI/9G0u8aIzksaEQQX1IrBXwJN5wxUSJGNsUa5fjDY2NlLLH1PZmaKgXgT2Cngyb7hC0xqr\n1FqsFotFLy5MNITqRWCviCfzhqlIZ2RMATJJVnCPJXDSEKoXgT0BARlFOiJjCpBp6kx1NHV+cN7V\nh8C+hpYD3It3RMaeC64r1cH50Q+hgX0QDygdHh5qe3v7wsNE56U9WLS3t9dWMRGBnZ0dHRwcaD6f\ny8w0n8+1WCx6+4BZ0sNMZqbr168Xeh/Oj4EJif5pm6Q3SfqSpFNJV0NfV2eLPbSlQe88sqS15Gez\nWfSt1sViUXqZvBXOj35QG6kYST8i6cWSPt1VYA+9FaV3HnmWy2XiAtexpyTqqNucH/0QGtgrpWLc\n/RF3/0qV96jq5s2bQT9PumWdTqfa399vrGzoRkhqLsnOzo7uuuuuCz+PPSUReg5k4fwYmJDon7ep\nBy12d3rnh66OFncfUxJ1dqByfsRNdaViJH1K0sMJ2+u9QGCXtCvphqQbW1tbtX3Qqr35VOZhyBvt\nEhrk+piSYETLeNQW2IPepMMWu3v54MwJMRx549NDWtx9zbG700AZi9DAXstCG2b2aUm/6e5Bq2fE\nstBGkQU2ELe8xTLyvtOkBVQkaTab6f7772dBC0ShlYU2zOwNZvaYpFdK+piZfaLK+7Wtjk4nxCFr\nvHlIJ2DSOG5Juuuuu3oV1Mt2HGNYqo6K+Yi7P9/dv8fdv9/dX1NXwdqQFgxifygFF6WtOjSbzYKW\nkBvCRX5113F8fCx31/HxsXZ3dwnuIzSIJ0/LYojXcCQ9UbpcLvXEE08EtbiHcJHn6VE8LSQRX/cW\n0+yOdDrBfRgd6X0cqoli1GbnaVGxdJ4C5x0eHmpvb083b97U1taW9vf3e5VfZzDA8LXSeQr0UVoH\n487Ojo6OjnR6eqqjo6NeBXWJ1CK+i8COUcnqYOz7iJKkfoaQjmMMD6kYjEpaumI2m+nJJ5+8o/Nx\nOp0SGBEVUjFAgrThi9/85jejHVHS9zsJtI/AjlEpOnyx63HsjE1HGQR2jEpaB+NsNkvcv+tx7IxN\nRxkEdoxKWgfj/fffH+WIkiE8EYv2Xeq6AEDbdnZ2UjtEYxvHvrW1ldjZ2/WdBOJGix04E+M4dsam\nowwCOzrRxUiPoseMYTQKY9NRSsi8A3VvMc0Vg/a1MS/L+hxAi8Wi0DGHMHcMhkfMFYNYNT2nSdKi\nGWaWuBBH2jGZdwUx4gElRKvpkR5JQwTTGjBFyxLraJQY0kaIB4EdrWt67vMiwbdoWWIcjcJDTFhH\nYEfrmh7pkRZ8zSz4mH0ajcJDTLggJBFf90bnKZpc4CSt43OxWBQ6Zl8WYUlbYENStGVGOaLzFGPW\n90Uzikjr6JWYoXJo6DzFqNX5sFFex2TXHZdpC3lLpGRGK6RZX/dGKgZ9kTeePZbx7svlMjUdw5qn\nwyFSMUB1eePZYxrvHlNZ0AxSMYhS12mLovLGs8c03r1PI3nQLAI7WtPH8dZ549ljGu/OvDJ4Wki+\npu6NHPs4zefzxBzwfD7vumip+pJjxzgoMMdOix2tiSltESqvFUwrGTGi8xStoXMPqKaVzlMz+30z\ne9TMvmhmHzGzZ1d5PwwbnXtAO6qmYh6Q9BJ3f6mkr0p6R/UiYaiy0hZ9Gy0DxKy2VIyZvUHSG909\nN7lIKgbnJc2fzqPwwEWhqZg6A/vfSPoLd1+m/H5X0q4kbW1t3ZM2twXGh9w7EKa2wG5mn5L0Awm/\n2nP3vzrbZ0/SVUk/5wFXClrsOG9jYyNxIQwz0+npaQclAuIUGtgv5e3g7q/OOdAvSXqtpGshQR1Y\nt7W1ldhij3FRC6APqo6KuVfS2yS9zt1P8vYHkjBaBqhX1VEx75H0LEkPmNlDZvbHNZQJI8NDPkC9\neEAJAHqC2R0BYKQI7AAwMAR2ABgYAnvDeFQeQNtyx7GjvPVH5VcLS0hixAeAxtBib9De3t4d859I\nrBoPoHkE9gb1cWEJAP1HYG9QTOthAhgPAnuDeFQeQBcI7A3iUXkAXWBKAQDoCaYUAICRIrADwMAQ\n2AFgYAjsADAwBHb0FvPwAMmYKwa9xDw8QDpa7Ogl5uEB0hHY0UvMwwOkI7Cjl5iHB0hHYEcvMQ8P\nkI7Ajl5iHh4gHXPFAEBPMFcMAIwUgR0ABobADgADQ2AHgIEhsAPAwBDYAWBgOhnuaGaPSzo+96Pn\nSHqi9YLUj88RFz5HXPgc1c3d/UreTp0E9guFMLsRMjYzdnyOuPA54sLnaA+pGAAYGAI7AAxMLIH9\noOsC1ITPERc+R1z4HC2JIscOAKhPLC12AEBNognsZva7ZvZFM3vIzD5pZj/YdZnKMLPfN7NHzz7L\nR8zs2V2XqQwze5OZfcnMTs0s6hEASczsXjP7ipl9zcze3nV5yjCz95nZN8zs4a7LUpaZvcDM/t7M\nHjmrT2/tukxlmNn3mtk/mdkXzj7Hu7ouU5ZoUjFm9n3u/t9n//41SXe7+1s6LlZhZvYzkv7O3b9j\nZr8nSe7+to6LVZiZ/YikU0l/Iuk33b038yyb2UTSVyX9tKTHJP2zpF9w9y93WrCCzOxVkm5J+oC7\nv6Tr8pRhZs+V9Fx3/7yZPUvSg5J+toffhUl6prvfMrNNSZ+R9FZ3/2zHRUsUTYt9FdTPPFNSHFec\ngtz9k+7+nbP/flbS87ssT1nu/oi7f6XrcpT0Cklfc/d/c/f/lfTnkl7fcZkKc/d/kPStrstRhbt/\n3d0/f/bv/5H0iKTndVuq4vy2W2f/3Tzboo1R0QR2STKzfTP7d0k7kn676/LU4Jcl/W3XhRih50n6\n93P/f0w9DCZDY2bbkl4u6XPdlqQcM5uY2UOSviHpAXeP9nO0GtjN7FNm9nDC9npJcvc9d3+BpENJ\nv9pm2YrI+xxn++xJ+o5uf5YohXyOnrKEn0XbuhoDM7tL0ocl/fra3XlvuPtT7v4y3b4Lf4WZRZse\nu9Tmwdz91YG7/pmkj0l6Z4PFKS3vc5jZL0l6raRrHksnRoIC30ffPCbpBef+/3xJ/9lRWUbvLCf9\nYUmH7v6XXZenKnf/tpl9WtK9kqLs2I4mFWNmLzr339dJerSrslRhZvdKepuk17n7SdflGal/lvQi\nM3uhmV2W9POS/rrjMo3SWafjeyU94u5/0HV5yjKzK6sRbmb2DEmvVsQxKqZRMR+W9GLdHolxLOkt\n7v4f3ZaqODP7mqTvkfTNsx99tqeje94g6d2Srkj6tqSH3P013ZYqnJldl/SHkiaS3ufu+x0XqTAz\n+6Ckn9Tt2QT/S9I73f29nRaqIDP7CUn/KOlfdPvclqTfcvePd1eq4szspZLer9v1aUPSh9z9d7ot\nVbpoAjsAoB7RpGIAAPUgsAPAwBDYAWBgCOwAMDAEdgAYGAI7AAwMgR0ABobADgAD8/8RAVud2J1E\nfgAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x2c2d0775c50>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#VISUALIZATIONS OF THE GRAPHS\n",
+    "pl.scatter(pca_data[:,0],pca_data[:,1],c='black')\n",
+    "pl.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -595,15 +635,6 @@
     }
    ],
    "source": [
-    "from sklearn.decomposition import PCA\n",
-    "\n",
-    "pca = PCA()\n",
-    "\n",
-    "# call pca.fit() on the data stored in 'scaled_data'.\n",
-    "pca.fit(scaled_data)\n",
-    "# Call pca.transform() on 'scaled_data' and store the results below.  \n",
-    "pca_data = pca.transform(scaled_data)\n",
-    "\n",
     "# When you initialize the object below, make sure 'n_cluster=3'\n",
     "pca_k_means = KMeans(n_clusters=3)\n",
     "\n",
@@ -613,17 +644,6 @@
     "# Principal components in pca_data. \n",
     "for ind, var in enumerate(pca.explained_variance_ratio_):\n",
     "    print(\"Explained Variance for Principal Component {}: {}\".format(ind, var))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#VISUALIZATIONS OF THE GRAPHS"
    ]
   },
   {
@@ -663,15 +683,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 51,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# dataset is called 'wholesale_customers_data.csv', and can be found in the 'datasets' folder\n",
-    "customers_df = None\n",
-    "channel_labels = None\n",
+    "customers_df =  pd.read_csv('datasets/wholesale_customers_data.csv')\n",
+    "channel_labels =customers_df.drop(['Channel', 'Region'], axis=1)\n",
     "\n",
     "# Be sure to drop Region and Channel columns from the dataframe!"
    ]
