--- a/06_K-Means_Clustering.ipynb
+++ b/06_K-Means_Clustering.ipynb
@@ -683,9 +683,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance for Principal Component 0: 0.44082892881128066\n",
+      "Explained Variance for Principal Component 1: 0.2837639952661692\n",
+      "Explained Variance for Principal Component 2: 0.12334412896786467\n",
+      "Explained Variance for Principal Component 3: 0.09395503752971496\n",
+      "Explained Variance for Principal Component 4: 0.04761272400688684\n",
+      "Explained Variance for Principal Component 5: 0.010495185418083763\n"
+     ]
+    }
+   ],
    "source": [
     "# dataset is called 'wholesale_customers_data.csv', and can be found in the 'datasets' folder\n",
     "customers_df =  pd.read_csv('datasets/wholesale_customers_data.csv')\n",
@@ -700,7 +713,9 @@
     "k_means2 = KMeans(n_clusters=3)\n",
     "pca2.fit(scaled_data2)\n",
     "pca_data2 = pca2.transform(scaled_data2)\n",
-    "pca_k_means2 = KMeans(n_clusters=2)"
+    "pca_k_means2 = KMeans(n_clusters=2)\n",
+    "for ind, var in enumerate(pca2.explained_variance_ratio_):\n",
+    "    print(\"Explained Variance for Principal Component {}: {}\".format(ind, var))"
    ]
   }
  ],
