--- a/07_Ensemble_Methods.ipynb
+++ b/07_Ensemble_Methods.ipynb
@@ -976,9 +976,7 @@
     "# Import the dataset, clean it, and then fit and a RandomForestClassifier \n",
     "# and make predictions on it below!\n",
     "import pandas as pd\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.datasets import make_classification\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "pima_df = pd.read_csv('datasets/pima_indians_diabetes.csv')\n",
     "\n",
     "outcome = pima_df['Outcome']\n",
@@ -989,6 +987,37 @@
     "pima_df['SkinThickness']=pima_df['SkinThickness'].replace(0, int(pima_df['SkinThickness'].mean()))\n",
     "pima_df['BMI']=pima_df['BMI'].replace(0, int(pima_df['BMI'].mean()))\n",
     "pima_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out-of-bag score estimate: 0.781\n",
+      "Mean accuracy score: 0.703\n"
+     ]
+    }
+   ],
+   "source": [
+    "#now that the set is clean I can do this here\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "X_train, X_test, y_train, y_test = train_test_split(pima_df, outcome)\n",
+    "forest = RandomForestClassifier(n_estimators=100, oob_score=True)\n",
+    "forest.fit(X_train, y_train)\n",
+    "\n",
+    "#PREDICTION TIME\n",
+    "predicted = forest.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, predicted)\n",
+    "print(f'Out-of-bag score estimate: {forest.oob_score_:.3}')\n",
+    "print(f'Mean accuracy score: {accuracy:.3}')"
    ]
   },
   {
